# NAUJA_REPOZICIJA

./: .gitignore  CMakeLists.txt  Doxyfile  FailoGeneravimas.cpp  FailoNuskaitymas.cpp  Mylib.h  Stud.cpp  Stud.h  Studentu_duomenys.cpp  Studentu_duomenys.sln  Studentu_duomenys.vcxproj  kietiakiai.txt  readme.md  studentai1000.txt  studentai10000.txt  vargsiukai.txt
html/: _failo_generavimas_8cpp.html  _failo_generavimas_8cpp.js  _failo_generavimas_8cpp_source.html  _failo_nuskaitymas_8cpp.html  _failo_nuskaitymas_8cpp.js  _failo_nuskaitymas_8cpp_source.html  _mylib_8h.html  _mylib_8h_source.html  _o_o_b123_2readme_8md.html  _stud_8cpp.html  _stud_8cpp.js  _stud_8cpp_source.html  _stud_8h.html  _stud_8h.js  _stud_8h_source.html  _studentu__duomenys_8cpp.html  _studentu__duomenys_8cpp.js  _studentu__duomenys_8cpp_source.html  annotated.html  annotated_dup.js  class_stud-members.html  class_stud.html  class_stud.js  classes.html  classzmogus-members.html  classzmogus.html  classzmogus.js  dir_b99372f456862936baf156f4102d7889.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_rela.html  globals.html  globals_func.html  hierarchy.html  hierarchy.js  md__o_o_b123_2readme.html  md_readme.html  (+5 more)
latex/: _failo_generavimas_8cpp.tex  _failo_generavimas_8cpp_source.tex  _failo_nuskaitymas_8cpp.tex  _failo_nuskaitymas_8cpp_source.tex  _mylib_8h.tex  _mylib_8h_source.tex  _o_o_b123_2readme_8md.tex  _stud_8cpp.tex  _stud_8cpp_source.tex  _stud_8h.tex  _stud_8h_source.tex  _studentu__duomenys_8cpp.tex  _studentu__duomenys_8cpp_source.tex  (+11 more)
(+43 files in other folders)
